// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`asterisk.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
*123*

=====================================output=====================================
_123_

================================================================================
`;

exports[`complex.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
**Do you want to request a *feature* or report a *bug*?**

*bug*?

=====================================output=====================================
**Do you want to request a _feature_ or report a _bug_?**

_bug_?

================================================================================
`;

exports[`special.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
0*1*2

!*1*2

0*1*!

!*1*!

0*1*2

！*1*2

0*1*！

！*1*！

0_1_2

!_1_2

0_1_!

!_1_!

0_1_2

！_1_2

0_1_！

！_1_！

1***2***3

1 ***2*** 3

=====================================output=====================================
0*1*2

!*1*2

0*1*!

!_1_!

0*1*2

！*1*2

0*1*！

！_1_！

0_1_2

!_1_2

0_1_!

!_1_!

0_1_2

！_1_2

0_1_！

！_1_！

1***2***3

1 _**2**_ 3

================================================================================
`;

exports[`underscore.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
_123_

=====================================output=====================================
_123_

================================================================================
`;
